--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,7 @@ import:
   version: ^1.1.0
 - package: github.com/pkg/errors
   version: ^0.8.0
+- package: github.com/google/go-github
+- package: go.uber.org/multierr
+  version: ^0.1.0
+- package: github.com/dgrijalva/jwt-go
