--- a/circle.yml
+++ b/circle.yml
@@ -31,5 +31,5 @@ deployment:
     tag: /v[0-9]+(\.[0-9]+)*/
     owner: redhat-ipaas
     commands:
-      - docker login -e $DOCKER_EMAIL -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
-      - make VERSION=${CIRCLE_TAG} push
+      - docker login -e ${DOCKER_EMAIL} -u ${DOCKER_LOGIN} -p ${DOCKER_PASSWORD}
+      - make VERSION=${CIRCLE_TAG} circleci-deploy
