--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/redhat-ipaas/pure-bot
+package: github.com/syndesisio/pure-bot
 import:
 - package: github.com/spf13/cobra
 - package: github.com/spf13/viper
