--- a/circle.yml
+++ b/circle.yml
@@ -29,7 +29,7 @@ test:
 deployment:
   hub_tag:
     tag: /v[0-9]+(\.[0-9]+)*/
-    owner: redhat-ipaas
+    owner: syndesisio
     commands:
       - docker login -e ${DOCKER_EMAIL} -u ${DOCKER_LOGIN} -p ${DOCKER_PASSWORD}
       - make VERSION=${CIRCLE_TAG} circleci-deploy
