--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -3,7 +3,7 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 # http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
@@ -16,7 +16,7 @@ FROM ARG_FROM
 
 MAINTAINER Jimmi Dyson <jimmidyson@gmail.com>
 
-RUN apk update && apk upgrade && apk add ca-certificates && rm -rf /var/cache/apk
+RUN apk --no-cache add ca-certificates
 
 ADD bin/ARG_ARCH/ARG_BIN /ARG_BIN
 
