--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,42 @@ job_defaults: &job_defaults
   working_directory: /go/src/github.com/syndesisio/pure-bot
 
 jobs:
+  checkout_code:
+    <<: *job_defaults
+
+    docker:
+    - image: golang:1.9.2
+
+    steps:
+    - checkout
+
+    - save_cache:
+        key: code-repo-{{ .Environment.CIRCLE_SHA1 }}
+        paths:
+        - /go/src/github.com/syndesisio/pure-bot
+
+  vendor_dependencies:
+    <<: *job_defaults
+
+    docker:
+    - image: golang:1.9.2
+
+    steps:
+    - restore_cache:
+        keys:
+        - code-repo-{{ .Environment.CIRCLE_SHA1 }}
+
+    - run:
+        name: Update dependencies
+        command: |
+          command -v dep >/dev/null 2>&1 || go get github.com/golang/dep/cmd/dep
+          dep ensure -v
+
+    - save_cache:
+        key: vendor-{{ checksum "Gopkg.lock" }}
+        paths:
+        - /go/src/github.com/syndesisio/pure-bot/vendor
+
   build:
     <<: *job_defaults
 
@@ -25,7 +61,13 @@ jobs:
     - image: docker:17.09.0-ce-git
 
     steps:
-    - checkout
+    - restore_cache:
+        keys:
+        - code-repo-{{ .Environment.CIRCLE_SHA1 }}
+
+    - restore_cache:
+        keys:
+        - vendor-{{ checksum "Gopkg.lock" }}
 
     - setup_remote_docker:
         version: 17.09.0-ce
@@ -48,13 +90,13 @@ jobs:
     - image: golang:1.9.2
 
     steps:
-    - checkout
+    - restore_cache:
+        keys:
+        - code-repo-{{ .Environment.CIRCLE_SHA1 }}
 
-    - run:
-        name: Update dependencies
-        command: |
-          command -v dep >/dev/null 2>&1 || go get github.com/golang/dep/cmd/dep
-          dep ensure -v
+    - restore_cache:
+        keys:
+        - vendor-{{ checksum "Gopkg.lock" }}
 
     - run:
         name: Run tests
@@ -92,9 +134,16 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
-      - test
-
+    - checkout_code
+    - vendor_dependencies:
+        requires:
+        - checkout_code
+    - build:
+        requires:
+        - vendor_dependencies
+    - test:
+        requires:
+        - vendor_dependencies
 
 # dependencies:
 #   override:
