ci(circleci): Store binary artifact

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,10 @@ jobs:
           paths:
           - pure-bot
 
+      - store_artifacts:
+          path: ./pure-bot
+          destination: binaries
+
   test:
     <<: *job_defaults
 
