--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,19 +228,19 @@ jobs:
 
       - run:
           name: OpenShift login
-          command: cli login ${OPENSHIFT_SERVER} --token=${OPENSHIFT_TOKEN}
+          command: openshift cli login ${OPENSHIFT_SERVER} --token=${OPENSHIFT_TOKEN}
 
       - run:
           name: Change OpenShift project
-          command: cli project ${OPENSHIFT_PROJECT}
+          command: openshift cli project ${OPENSHIFT_PROJECT}
 
       - run:
           name: Tag OpenShift image stream
-          command: cli tag --source=docker syndesis/pure-bot:${CIRCLE_TAG} pure-bot:deploy
+          command: openshift cli tag --source=docker syndesis/pure-bot:${CIRCLE_TAG} pure-bot:deploy
 
       - run:
           name: Import latest image to OpenShift image stream
-          command: cli import-image pure-bot:deploy
+          command: openshift cli import-image pure-bot:deploy
 
 workflows:
   version: 2
