chore: Add label support + openshift config + documentation

--- a/.circleci/Dockerfile
+++ b/.circleci/Dockerfile
@@ -1,8 +1,8 @@
 FROM alpine:3.6
-LABEL maintainer="jimmidyson@gmail.com"
+LABEL maintainer="rhuss@redhat.com"
 EXPOSE 8080
 RUN apk --no-cache add ca-certificates
 WORKDIR /
 COPY pure-bot .
+ENTRYPOINT ["/pure-bot"]
 USER 10000
-CMD ["/pure-bot"]
