feat: Add "requested review" handling + check + refactoring
- If a review is requested the label "pure-bot/requested-review" is added
  (must be configured in the configuration otherwise this functionality is switched off)
- If the last reviewer has been removed and no review has given yet, this
  label is removed (if given)
- A new check "pure-bot/requested-review" check has been added
  * passes if the label "status/review-requested" is not given
  * passes if the label "status/review-requested" is given and at least one reviewer has submitted a review
- The old "pure-bot/wip" check has reverted to the old behaviour
- The internal architecture has been refactored
- A --debug flag has been added for better logging

This reverts #34 and fixes #39

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -81,3 +81,7 @@
 [[constraint]]
   name = "go.uber.org/zap"
   version = "1.4.1"
+
+[[constraint]]
+  name = "github.com/google/go-github"
+  branch = "master"
