--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -85,3 +85,7 @@
 [[constraint]]
   name = "github.com/google/go-github"
   branch = "master"
+
+[[constraint]]
+  name = "github.com/go-resty/resty"
+  branch "master"
