--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           name: Update dependencies
           command: |
             command -v dep >/dev/null 2>&1 || go get github.com/golang/dep/cmd/dep
-            dep ensure -v
+            dep ensure -v -vendor-only
 
       - save_cache:
           key: vendor-{{ checksum "Gopkg.lock" }}
