Fixing build error (using resty v1 instead of master v2)

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -86,5 +86,5 @@
   name = "github.com/google/go-github"
 
 [[constraint]]
-  revision = "master"
+  revision = "v1.12.0"
   name = "github.com/go-resty/resty"
